# notification-api-rust

./: .env.local.sample  .gitignore  Cargo.toml  README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml  docker.env
migrations/2024-03-26-221305_create_notifications/: down.sql  up.sql
migrations/2024-03-29-165114_added_user_id/: down.sql  up.sql
src/: database.rs  e2e.rs  main.rs  models.rs  notification.rs  notification_controller.rs  notification_repository.rs  notification_service.rs  schema.rs
src/notification-api/: notification.rs  notification_controller.rs  notification_repository.rs  notification_service.rs
