[package]
name = "notification-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "notification"
path = "src/notification.rs"

[dependencies]
rocket = "0.5.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
uuid = "1.8.0"